# generate

./: README.md
netlify-function/: netlify.toml
netlify-function/functions/hello/: Cargo.toml
netlify-function/functions/hello/src/: main.rs
netlify-function/functions/{{crate-name}}/: Cargo.toml
netlify-function/functions/{{crate-name}}/src/: main.rs
